--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="icon" href="data:,">
     <script src="https://pixijs.download/release/pixi.js"></script>
     <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+        }
         @keyframes pulse {
             0% { opacity: 1; }
             50% { opacity: 0.7; }
